--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.5.1"
+anyhow = "1.0.81"
 dotenvy = "0.15.7"
 serde = { version = "1.0.197", features = ["derive"] }
 sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
 sqlx-cli = "0.7.4"
+tera = "1.19.1"
+thiserror = "1.0.58"
 
